Adding protection from clickjacking attack using xml httpProtocol x-frame-options

--- a/Ivan-Richard/web.config
+++ b/Ivan-Richard/web.config
@@ -27,5 +27,10 @@
         </rule>
       </rules>
     </rewrite>
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="sameorigin" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 </configuration>
