--- a/Ivan-Richard/ClientApp/package.json
+++ b/Ivan-Richard/ClientApp/package.json
@@ -24,11 +24,14 @@
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
+    "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.4.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.9",
     "fancybox": "^3.0.1",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "jquery": "^3.4.1",
     "rxjs": "^5.5.12",
     "zone.js": "^0.8.29"
