--- a/Ivan-Richard/ClientApp/package.json
+++ b/Ivan-Richard/ClientApp/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.11",
+    "@angular/cli": "^1.7.4",
     "@angular/common": "^5.2.11",
     "@angular/compiler": "^5.2.11",
     "@angular/core": "^5.2.11",
@@ -24,6 +25,7 @@
     "@angular/platform-server": "^5.2.11",
     "@angular/router": "^5.2.11",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0",
+    "angular-cli": "^1.0.0-beta.28.3",
     "angular-font-awesome": "^3.1.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.4.1",
@@ -37,7 +39,6 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^5.2.11",
     "@types/jasmine": "^2.8.16",
